Minor formatting and revisions

--- a/Metodologia/Secciones/ModeloComputacional/Subsecciones/Estimadores/EstimacionesIniciales.tex
+++ b/Metodologia/Secciones/ModeloComputacional/Subsecciones/Estimadores/EstimacionesIniciales.tex
@@ -8,7 +8,7 @@ físicos del sistema. El estimador \textbf{EBAI-KNN} para estimar los siguientes
 parámetros: el \textit{tiempo de conjunción superior} (\code{t0\_supconj}), la
 \textit{razón de temperaturas} (\code{teffratio}), la \textit{inclinación
 orbital} (\code{incl@binary}), el \textit{factor de relleno}
-(\quotes{\textit{fillout factor}} en inglés, \code{fillout\_factor}), y la
+(\textit{fillout factor} en inglés, \code{fillout\_factor}), y la
 \textit{razón de masas} (\code{q}). A pesar que dentro de PHOEBE estén
 implementados estimadores adicionales, solo se puede aplicar el
 \textbf{EBAI-KNN} estimador; esto se debe a que el modelo del sistema del que
