--- a/Muestra/Secciones/ATO_Objeto.tex
+++ b/Muestra/Secciones/ATO_Objeto.tex
@@ -16,9 +16,9 @@ vienen siendo una clasificación tentativa.
 \textbf{\atoObjId} está clasificado como una de estas candidatas a binaria
 eclipsante. Como este sistema carece una clasificación concreta, no existe mucha
 información acerca de ella. Tiene una magnitud promedio de aproximadamente
-\num{16.91}, lo cual lo hace un sistema tenue. Con una ascensión recta de \code{22 39
-47.2569} y declinación de \code{+45 08 47.0311}, \textbf{\atoObjId} es un sistema ideal
-para observar desde el OAU en Iturbide.
+\num{16.91}, lo cual lo hace un sistema tenue. Con una ascensión recta de
+\code{22 39 47.2569} y declinación de \code{+45 08 47.0311}, \textbf{\atoObjId}
+es un sistema ideal para observar desde el OAU en Iturbide.
 
 % TODO: dejar este break aquí para mantener subsección de Gaia junto?
 \newpage
@@ -45,3 +45,5 @@ temperaturas de las estrellas individuales.
 	binario. \citet{gdr3ReleaseDocumentation}}
 	\label{gdr3AtoObjLightCurves}
 \end{figure}
+
+\subsection{Datos de ZTF}
