--- a/ref.bib
+++ b/ref.bib
@@ -297,3 +297,22 @@ A. Nitta and D. P. Schneider and S. A. Snedden and D. G. York},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2022gdr3.reptE....V},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@article{simbadDatabase,
+	title = {The {SIMBAD} astronomical database: {The} {CDS} reference database for astronomical objects},
+	volume = {143},
+	issn = {0365-0138, 1286-4846},
+	shorttitle = {The {SIMBAD} astronomical database},
+	url = {http://aas.aanda.org/10.1051/aas:2000332},
+	doi = {10.1051/aas:2000332},
+	abstract = {Simbad is the reference database for identiﬁcation and bibliography of astronomical objects. It contains identiﬁcations, “basic data”, bibliography, and selected observational measurements for several million astronomical objects.},
+	language = {en},
+	number = {1},
+	urldate = {2023-11-15},
+	journal = {Astronomy and Astrophysics Supplement Series},
+	author = {Wenger, M. and Ochsenbein, F. and Egret, D. and Dubois, P. and Bonnarel, F. and Borde, S. and Genova, F. and Jasniewicz, G. and Laloë, S. and Lesteven, S. and Monier, R.},
+	month = apr,
+	year = {2000},
+	pages = {9--22},
+	file = {Wenger et al. - 2000 - The SIMBAD astronomical database The CDS referenc.pdf:/home/ramon/Zotero/storage/5RNUUDQR/Wenger et al. - 2000 - The SIMBAD astronomical database The CDS referenc.pdf:application/pdf},
+}
